# chers

./: Cargo.toml  README.md  cpufreq.sh
benches/: criterion.rs  make_move.rs  perft_benches.rs  search.rs  valgrind.rs
src/: attack.rs  bit_move.rs  bitboard.rs  castling_rights.rs  color.rs  error.rs  evaluate.rs  fen.rs  file.rs  generate_moves.rs  lib.rs  main.rs  move.rs  move_list.rs  parsed_move.rs  perft.rs  piece.rs  position.rs  position_state.rs  rank.rs  search.rs  square.rs
src/utils/: fen.rs  mod.rs
