[package]
name = "chers"
version = "0.1.0"
authors = ["paga2004 <pascigamma@bluewin.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
name = "chers"
path = "src/main.rs"

[dependencies]
num_enum = "0.5.1"
thiserror = "1.0.24"

[dev-dependencies]
pretty_assertions = "0.7.2"
test-case = "1.1.0"

[profile.test]
opt-level = 3
debug = true
debug-assertions = true
