[package]
name = "chers"
version = "0.1.0"
authors = ["paga2004 <pascigamma@bluewin.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
name = "chers"
path = "src/main.rs"

[[bench]]
name = "criterion"
harness = false

[[bench]]
name = "valgrind"
harness = false

[dependencies]
arrayvec = "0.7.1"
thiserror = "1.0.24"

[dev-dependencies]
pretty_assertions = "0.7.2"
test-case = "1.1.0"
criterion = "0.3"
iai = "0.1.1"
zstd = "0.9.0"

[profile.test]
opt-level = 3 # otherwise perft tests take ages
debug = true
debug-assertions = true

[profile.bench]
debug = true # needed for flamegraph
debug-assertions = false
opt-level = 3
lto = 'fat'
codegen-units = 1

[profile.release]
debug = false
debug-assertions = false
opt-level = 3
lto = 'fat'
codegen-units = 1
panic = 'abort'
